[package]
name = "imagej-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of ij.process — ImageJ core image processing (public domain)"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "tiff"] }
